# Project-G

./: .env  .gitignore  DatingAppUser.py  README.md  TheBumbler.py  TinderBot.py  pyproject.toml
BE/: DatingAppUser.py
BE/bots/: DatingAppUser.py  TheBumbler.py  TinderBot.py
BE/db/tests/DBUtils/: DAO.py  hello.py  serializing.py  testseriazlizing.py
BE/db/tests/scripts/: gotosite.py  start-chrome-session.bat
FE/: tailwind.config.js
FE/src/: App.tsx
FE/src/components/: Navbar.tsx  SelectionBar.tsx
backend/project_g.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/project_g/bots/: TinderBot.py
backend/project_g/db/: DatingAppUser.py
backend/project_g/db/DBUtils/: UserDAO.py
backend/project_g/models/: DatingAppUser.py
backend/projectg/: config.py  main.py
backend/projectg/bots/: BaseScraper.py  Bumbler.py  TinderBot.py
backend/projectg/db/: schema.prisma
backend/projectg/models/: DatingAppUser.py  Prompt.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
scripts/: gotosite.py  start-chrome-session.bat
